--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@iotame/builtins",
-  "version": "0.0.1",
+  "keywords": [
+    "iotame-plugin"
+  ],
+  "version": "0.0.2",
   "description": "The base extension of iotame, containing all builtin channels, devices and protocols",
   "main": "index.js",
   "scripts": {
@@ -17,6 +20,13 @@
   },
   "homepage": "https://github.com/iotame/builtins#readme",
   "dependencies": {
-    "@iotame/api": "file:../api"
+    "@iotame/api": ">=0.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
